--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -56,9 +56,10 @@
                         <li>
                             <a class="active" href="search"><i class="fa fa-dashboard fa-fw"></i>Buscar</a>
                         </li>
-
+                        <li>
+                            <a class="active" href="status"><i class="fa fa-dashboard fa-fw"></i>Torrents status</a>
+                        </li>
                          <li>
-
                             <a href="feeds"><i class="fa fa-table fa-fw"></i>Feeds</a>
                         </li>
 
