--- a/web/client/css/main.css
+++ b/web/client/css/main.css
@@ -3,7 +3,6 @@
 	padding: 0;
 }
 
-
 body.login {
     background: url('../img/game-of-thrones.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -15,6 +14,7 @@ body.login {
     overflow-y: hidden;
 		background-color: rgba(0,0,255,0.7);
 		opacity: .9
+
 }
 
 
@@ -59,7 +59,6 @@ body.login {
 .welcome {
 	margin-top: 60px;
 	padding-left:20px;
-
 }
 
 
@@ -144,6 +143,17 @@ body.login {
     filter: alpha(opacity=100);
 }
 
-body.login form {
+body.login form { }
 
+.input-group[class*=col-] {
+	float:left;
+}
+
+.status-form-row {
+	padding-top: 10px;
+}
+
+.status-form-row .pull-left {
+	margin-right: 5px;
+	padding-left: 2px;
 }
