--- a/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,10 @@
 {% extends 'MorenwareDutilsBundle::base.html.twig' %}
 
 {% block body %}
-<div id="angular-wrapper" ng-view>
+<div class="container well welcome">
 
+   <h1>Welcome to Media Downloader Automator</h1>
+   
 </div>
 
 {% endblock %}
