Fix Transmission calls to start torrents as they are added (they were paused due to relocation).
Some refactoring of bootstrap for better quality of display in mobile.

--- a/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
@@ -1,11 +1,10 @@
 {% extends 'MorenwareDutilsBundle::base.html.twig' %}
 
 {% block body %}
-<div class="container well welcome">
+<div class="container-fluid well welcome">
 
    <h1>Welcome to Media Downloader Automator</h1>
-   
+
 </div>
 
 {% endblock %}
-
