--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
 
 
-<div class="searchTorrentsPage" ng-controller="searchController" ng-init="initTorrents({{ torrentsInfo }})">
-   <div class="row">
+<div class="searchTorrentsPage container-fluid" ng-controller="searchController" ng-init="initTorrents({{ torrentsInfo }})">
+   <div class="row-fluid">
 	    <div class="col-lg-12">
 	     <h1 class="page-header">Buscar torrents</h1>
 	    </div>
