--- a/web/client/css/main.css
+++ b/web/client/css/main.css
@@ -3,22 +3,8 @@
 	padding: 0;
 }
 
-html {
-	
-    background: url('../img/game-of-thrones.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-	    opacity: 0.8;
-  
-   
-}  
-
-
 
 body.login {
-	
     background: url('../img/game-of-thrones.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -27,11 +13,10 @@ body.login {
     height: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
-
-      background-color: rgba(0,0,255,0.7);
-  
+		background-color: rgba(0,0,255,0.7);
+		opacity: .9
 }
-    
+
 
 .page-header {
 	margin-top: 10px;
@@ -74,20 +59,52 @@ body.login {
 .welcome {
 	margin-top: 60px;
 	padding-left:20px;
-	width: 80%;	
 
 }
 
 
 #page-wrapper {
-	margin: 29px 0 0 250px;
 	border-left: none;
 }
 
+/* This is mobile */
 .sidebar {
-	margin-top: 80px;
-	border: 1px solid #e7e7e7;
 }
+
+/* This is a desktop */
+/* @media only screen and (min-width : 480px) { */
+@media only screen and (min-width : 480px) {
+	.sidebar {
+		border: 1px solid #e7e7e7;
+	}
+
+	.navbar-header {
+		 float: none;
+	}
+}
+
+@media (min-width: 768px) {
+
+	body {
+		background-color: #fff;
+	}
+
+	.sidebar {
+		margin: 10px;
+		border: 1px solid #e7e7e7;
+	}
+}
+
+@media (min-width: @screen-sm-min) {
+
+}
+
+@media (min-width: @screen-md-min) {
+
+
+}
+
+
 
 /* For the login form */
 /* http://stackoverflow.com/questions/22196587/how-to-center-align-vertically-the-container-in-bootstrap */
@@ -97,7 +114,7 @@ body.login {
   z-index: 50;
   display: flex;
   align-items: center;
-  
+
 }
 
 .vertical-center .container {
@@ -105,8 +122,8 @@ body.login {
 	padding: 20px;
 	padding-top: 10px;
     opacity:0.85;
-    filter: alpha(opacity=85);   
-	
+    filter: alpha(opacity=85);
+
 }
 
 .col-centered{
@@ -119,10 +136,14 @@ body.login {
 	margin-top:10px;
 	margin-bottom:15px;
 	opacity:1;
-    filter: alpha(opacity=100);   
+    filter: alpha(opacity=100);
 }
 
 .form-control {
 	opacity:1;
-    filter: alpha(opacity=100);   
+    filter: alpha(opacity=100);
+}
+
+body.login form {
+
 }
