Closes #50 Added dateStarted, dateFinished to Torrent and workflow.

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentsTable.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentsTable.html
@@ -10,7 +10,17 @@
        <tbody>
            <tr ng-repeat="torrent in torrents | torrentsByState:filterState track by $index">
              <td ng-bind="offset+$index+1"></td>
-             <td ng-repeat="fieldLabel in fieldLabels track by $index" ng-bind-html="processField(torrent,fieldLabel)"></td>
+             <td ng-repeat="fieldLabel in fieldLabels track by $index">
+
+                <p ng-if="fieldLabel == 'PercentDone'" ng-bind-html="processField(torrent,fieldLabel)" />
+                <p ng-if="fieldLabel == 'State'">
+                  <render-torrent-state torrent="torrent" />
+                </p>
+
+                <p ng-if="fieldLabel != 'PercentDone' && fieldLabel != 'State'">
+                [[processField(torrent,fieldLabel)]]
+                </p>
+              </td>
              <td class="col-sm-5"><torrent-actions torrent="torrent" /></td>
            </tr>
        </tbody>
