--- a/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
@@ -2,14 +2,13 @@
 
 {% block body %}
 
-
 <div class="torrentsStatusPage" ng-controller="torrentsStatusController" ng-init="init({{torrents}})">
    <div class="row">
 	    <div class="col-lg-12">
 	     <h1 class="page-header">Torrents Status</h1>
 	    </div>
 	 </div>
-   <div class="well">
+   <div class="well" ng-hide="true">
     	<div class="row status-form-row">
     		 <div class="pull-left col-sm-8">
             	<input type="text" class="form-control" ng-model="query" placeholder="Buscar...">
@@ -44,36 +43,21 @@
 
     <tabset>
       <tab heading="Downloading" active="true">
-        <div class="col-lg-10">
-          <torrents-table torrents="torrents"
-              fields="Title,State,Date,Size,PercentDone"
-              actions="start,cancel"
-              filter-state="DOWNLOADING,PAUSED" />
-        </div>
+
+          <torrents-elements torrents="torrents" filter-state="DOWNLOADING,PAUSED" />
+
       </tab>
       <tab heading="Awaiting download">
-        <torrents-table torrents="torrents"
-            fields="Title,Date,Size,Seeds"
-            actions="restart,delete"
-            filter-state="AWAITING_DOWNLOAD" />
+        <torrents-elements torrents="torrents" filter-state="AWAITING_DOWNLOAD" />
       </tab>
       <tab heading="Processing">
-        <torrents-table torrents="torrents"
-            fields="Title,State,Date,Size"
-            actions="restart,delete"
-            filter-state="DOWNLOAD_COMPLETED,RENAMING,RENAMING_COMPLETED,FETCHING_SUBTITLES" />
+        <torrents-elements torrents="torrents" filter-state="DOWNLOAD_COMPLETED,RENAMING,RENAMING_COMPLETED,FETCHING_SUBTITLES" />
       </tab>
       <tab heading="Completed">
-        <torrents-table torrents="torrents"
-            fields="Title,Date,Size"
-            actions="restart,delete"
-            filter-state="COMPLETED" />
+        <torrents-elements torrents="torrents" filter-state="COMPLETED" />
       </tab>
       <tab heading="Failed">
-        <torrents-table torrents="torrents"
-            fields="Title,State,Date,Size"
-            actions="restart,delete"
-            filter-state="COMPLETED_WITH_ERROR,FAILED_DOWNLOAD_ATTEMPT" />
+        <torrents-elements torrents="torrents" filter-state="COMPLETED_WITH_ERROR,FAILED_DOWNLOAD_ATTEMPT" />
       </tab>
     </tabset>
   </div>
