--- a/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Download Utils Manager</title>
+    <title>Media Downloader Automator</title>
       	{% block stylesheets %}
           <link href="client/css/bootstrap.min.css" rel="stylesheet" />
           <link href="client/css/metis-menu.css" rel="stylesheet" />
