--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -6,14 +6,14 @@
 <div class="searchTorrentsPage container-fluid" ng-controller="searchController" ng-init="initTorrents({{ torrentsInfo }})">
    <div class="row-fluid">
 	    <div class="col-lg-12">
-	     <h1 class="page-header">Buscar torrents</h1>
+	     <h1 class="page-header">Search torrents</h1>
 	    </div>
 	</div>
 
     <form>
     	<div class="row search-form">
     		 <div class="input-group custom-search-form col-lg-12">
-             	<input type="text" class="form-control" ng-model="query" placeholder="Buscar...">
+             	<input type="text" class="form-control" ng-model="query" placeholder="Search...">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="submit" ng-click="search()">
                     <i class="fa fa-search"></i>
@@ -35,8 +35,8 @@
 
 	<div class="row search-results" ng-show="searchFinished">
 	    <div class="col-lg-12">
-	                <h4>Resultados para: '[[query]]'</h4>
-	                <h5>[[offset+1]]-[[currentOffset]] de [[total]]</h5>
+	                <h4>Results for: '[[query]]'</h4>
+	                <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
                      <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
