--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -31,7 +31,7 @@
                     <!-- /.dropdown -->
                 </ul>
 
-                <a class="navbar-brand" href="search">Media Downloader</a>
+                <a class="navbar-brand" href="search">Media Downloader Automator</a>
 
             </div>
             <!-- /.navbar-header -->
@@ -54,15 +54,11 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a class="active" href="search"><i class="fa fa-dashboard fa-fw"></i>Buscar</a>
+                            <a href="search"><i class="fa fa-dashboard fa-fw"></i>Search</a>
                         </li>
                         <li>
-                            <a class="active" href="status"><i class="fa fa-dashboard fa-fw"></i>Torrents status</a>
+                            <a href="status"><i class="fa fa-dashboard fa-fw"></i>Status</a>
                         </li>
-                         <li>
-                            <a href="feeds"><i class="fa fa-table fa-fw"></i>Feeds</a>
-                        </li>
-
 
                     </ul>
                 </div>
