--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentsElements.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentsElements.html
@@ -1,12 +1,7 @@
 <div class="list-group container-fluid">
-  <div class="list-group-item row-fluid" ng-repeat="torrent in torrents | torrentsByState:filterState track by $index">
-    <div class="row-fluid clearfix">
-      <div class="pull-left col-sm-1 col-xs-1 no-padding">
-        [[$index+1]]
-      </div>
-     <div class="pull-left col-sm-11 col-xs-11 no-padding">
+  <div class="list-group-item row-fluid clearfix" ng-repeat="torrent in torrents | torrentsByState:filterState track by $index">
+     <div class="pull-left col-sm-12 col-xs-12 no-padding">
       <torrent-element torrent="torrent" />
      </div>
-    </div>
   </div>
 </div>
