--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -31,7 +31,7 @@
                     <!-- /.dropdown -->
                 </ul>
 
-                <a class="navbar-brand" href="search">Media Downloader Automator</a>
+                <a class="navbar-brand" href="search">Media Downloader</a>
 
             </div>
             <!-- /.navbar-header -->
@@ -42,7 +42,7 @@
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
+                        <!-- <li class="sidebar-search">
                             <div class="input-group custom-search-form">
                                 <input type="text" class="form-control" placeholder="Search...">
                                 <span class="input-group-btn">
@@ -51,10 +51,11 @@
                                 </button>
                             </span>
                             </div>
-                            <!-- /input-group -->
-                        </li>
+
+                        </li> -->
+                        <li class="header"><a>Main</a></li>
                         <li>
-                            <a href="search"><i class="fa fa-dashboard fa-fw"></i>Search</a>
+                            <a href="search"><i class="fa fa-search fa-fw"></i>Search</a>
                         </li>
                         <li>
                             <a href="status"><i class="fa fa-dashboard fa-fw"></i>Status</a>
