--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentElement.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentElement.html
@@ -9,11 +9,11 @@
   </div>
 
   <div class="row-fluid clearfix no-padding">
-    <progress-bar class="col-xs-5 col-sm-6 no-padding" ng-hide="torrent.state != 'DOWNLOADING' && torrent.state != 'PAUSED'" percent="torrent.percentDone || 0" class="pull-left col-sm-4 no-padding" />
+    <progress-bar class="no-padding" ng-hide="torrent.state != 'DOWNLOADING' && torrent.state != 'PAUSED'" percent="torrent.percentDone || 0" class="pull-left col-sm-4 no-padding" />
   </div>
 
    <div class="row-fluid no-padding clearfix">
-     <div class="list-group-item-text col-sm-2 col-xs-7 no-padding">
+     <div class="list-group-item-text no-padding">
       [[fieldFormat('date',torrent)]] &nbsp; | &nbsp; [[fieldFormat('size',torrent)]]
      </div>
    </div>
