#63 Adjust status data shown to better arrangement

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/progressBar.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/progressBar.html
@@ -1,6 +1,4 @@
 <div class="progress">
   <div class="progress-bar-success" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100"
-       style="width: [[percent]]%; min-width:20px">
-       [[percent]]%
-  </div>
+       style="width: [[percent]]%; min-width:20px">&nbsp;</div>
 </div>
