--- a/src/Morenware/DutilsBundle/Resources/client/app/components/renderTorrentState.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/renderTorrentState.html
@@ -1,1 +1,1 @@
-<span class="label" ng-class="process(torrent).cssClass">[[process(torrent).stateText]]</span>
+<span class="label" ng-class="process(torrent).cssClass">[[process(torrent).stateText]]&nbsp;-&nbsp;[[torrent.percentDone]]%</span>
