--- a/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
@@ -4,11 +4,9 @@
 
 <div class="torrentsStatusPage container-fluid" ng-controller="torrentsStatusController" ng-init="init({{torrents}})">
    <div class="row-fluid clearfix">
-	    <div class="col-lg-12 col-xs-12">
 	     <h1 class="page-header">Torrents Status</h1>
-	    </div>
 	 </div>
-   <div class="well" ng-hide="true">
+   <!-- <div class="well" ng-hide="true">
     	<div class="row status-form-row">
     		 <div class="pull-left col-sm-8">
             	<input type="text" class="form-control" ng-model="query" placeholder="Buscar...">
@@ -28,9 +26,9 @@
         </div>
 
     	</div>
-   </div>
+   </div> -->
 
-  <div class="row-fluid clearfix">
+  <!-- <div class="row-fluid clearfix">
     <div class="col-lg-5 col-xs-5 col-xs-offset-8 col-lg-offset-11">
       <button type="button" class="btn btn-primary" ng-click="startPolling()" ng-show="!isPolling">
          Start polling
@@ -39,7 +37,7 @@
          Stop polling
       </button>
    </div>
-  </div>
+  </div> -->
 
   <div class="row-fluid search-results clearfix" role="tabpanel">
 
