--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -5,9 +5,7 @@
 
 <div class="searchTorrentsPage container-fluid" ng-controller="searchController" ng-init="initTorrents({{ torrentsInfo }})">
    <div class="row-fluid">
-	    <div class="col-lg-12">
-	     <h1 class="page-header">Search torrents</h1>
-	    </div>
+     <h1 class="page-header">Search torrents</h1>
 	</div>
 
     <form>
@@ -16,7 +14,8 @@
              	<input type="text" class="form-control" ng-model="query" placeholder="Search...">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="submit" ng-click="search()">
-                    <i class="fa fa-search"></i>
+                    <i ng-show="!loading" class="fa fa-search"></i>
+                    <i ng-show="loading" class="fa">&nbsp;Searching</i>
                   </button>
                 </span>
              </div>
@@ -33,8 +32,8 @@
         </div>
     </div>
 
-	<div class="row search-results" ng-show="searchFinished">
-	    <div class="col-lg-12">
+	<div class="row-fluid search-results" ng-show="searchFinished">
+	    <div class="col-lg-12 ng-cloak">
 	                <h4>Results for: '[[query]]'</h4>
 	                <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
                      <div class="table-responsive">
