#65 First full implemented model for automated search. Ready to start testing. Need to add activation/deactivation to feeds.

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/adminTable.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/adminTable.html
@@ -24,7 +24,7 @@
                     <!-- expression inside the ngClick: we delegate in the parent scope the updateAction by passing in the current item as 'item', which becomes an scoped value in the parent scope of this directive. Therefore, 'item' will be available in the parent scope to manipulate - Use of '&' in the directive to achieve this -->
                     <a ng-if="isUpdateActionDefined" href="#" ng-click="updateAction({item: item})"><span class="glyphicon glyphicon-pencil"></span>&nbsp;</a>
                     <!-- TODO: delete action -->
-                    <a ng-if="isDeleteActionDefined"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a ng-if="isDeleteActionDefined" href="#" ng-click="deleteAction({item: item})"><span class="glyphicon glyphicon-remove"></span>&nbsp;</a>
                 </td>
             </tr>
         </tbody>
