--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -60,6 +60,9 @@
                         <li>
                             <a href="status"><i class="fa fa-dashboard fa-fw"></i>Status</a>
                         </li>
+                        <li>
+                            <a href="feeds"><i class="fa fa-gear"></i>Feeds</a>
+                        </li>
 
                     </ul>
                 </div>
