--- a/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
@@ -39,7 +39,7 @@
    </div>
   </div> -->
 
-  <div class="row-fluid search-results clearfix" role="tabpanel">
+  <div class="row-fluid search-results clearfix ng-cloak" role="tabpanel">
 
     <tabset>
       <tab heading="Downloading" active="true">
