Client code for automated search

--- a/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html ng-app="dutilsApp">
+<!-- ng-app="dutilsApp" -->
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
