--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -63,6 +63,9 @@
                         <li>
                             <a href="feeds"><i class="fa fa-gear"></i>Feeds</a>
                         </li>
+                        <li>
+                            <a href="automatedsearch"><i class="fa fa-gear"></i>Automated search</a>
+                        </li>
 
                     </ul>
                 </div>
