Starting working with modules per feature - FE

--- a/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- ng-app="dutilsApp" -->
-<html>
+<html ng-app="dutilsApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
