--- a/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/torrentsStatus.html.twig
@@ -2,63 +2,6 @@
 
 {% block body %}
 
-<div class="torrentsStatusPage container-fluid" ng-controller="torrentsStatusController" ng-init="init({{torrents}})">
-   <div class="row-fluid clearfix">
-	     <h1 class="page-header">Torrents Status</h1>
-	 </div>
-   <!-- <div class="well" ng-hide="true">
-    	<div class="row status-form-row">
-    		 <div class="pull-left col-sm-8">
-            	<input type="text" class="form-control" ng-model="query" placeholder="Buscar...">
-          </div>
-          <div class="pull-left col-sm-2">
-            <select class="form-control" name="category">
-              <option>Today</option>
-              <option>Last week</option>
-              <option>Last month</option>
-              <option>All time</option>
-            </select>
-          </div>
-          <div class="pull-left">
-            <button type="button" class="btn btn-primary" aria-label="Left Align">
-             Filter
-            </button>
-        </div>
+<torrents-status />
 
-    	</div>
-   </div> -->
-
-  <!-- <div class="row-fluid clearfix">
-    <div class="col-lg-5 col-xs-5 col-xs-offset-8 col-lg-offset-11">
-      <button type="button" class="btn btn-primary" ng-click="startPolling()" ng-show="!isPolling">
-         Start polling
-      </button>
-      <button type="button" class="btn btn-primary" ng-click="stopPolling()" ng-show="isPolling">
-         Stop polling
-      </button>
-   </div>
-  </div> -->
-
-  <div class="row-fluid search-results clearfix ng-cloak" role="tabpanel">
-
-    <tabset>
-      <tab heading="Downloading" active="true">
-          <torrents-elements torrents="torrents" filter-state="DOWNLOADING,PAUSED" />
-      </tab>
-      <tab heading="Awaiting download">
-        <torrents-elements torrents="torrents" filter-state="AWAITING_DOWNLOAD" />
-      </tab>
-      <tab heading="Processing">
-        <torrents-elements torrents="torrents" filter-state="DOWNLOAD_COMPLETED,RENAMING,RENAMING_COMPLETED,FETCHING_SUBTITLES" />
-      </tab>
-      <tab heading="Completed">
-        <torrents-elements torrents="torrents" filter-state="COMPLETED" />
-      </tab>
-      <tab heading="Failed">
-        <torrents-elements torrents="torrents" filter-state="COMPLETED_WITH_ERROR,FAILED_DOWNLOAD_ATTEMPT" />
-      </tab>
-    </tabset>
-  </div>
-
-</div>
 {% endblock %}
