--- a/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -44,5 +44,5 @@
 	    <script type="text/javascript" src="client/js/sb-admin-2.js"></script>
 		  <script type="text/javascript" src="client/js/app/init.js"></script>
     {% endblock %}
-
+  </body>
 </html>
