FileManager: initial call to list

--- a/src/Morenware/DutilsBundle/Resources/views/baseFilemanager.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/baseFilemanager.html.twig
@@ -23,6 +23,7 @@
 
                 fileManagerConfig.set({
                     appName: 'Media Downloader Automator - View Library',
+                    listUrl: "api/media/list",
                     allowedActions: angular.extend(defaults.allowedActions, {
                         remove: true
                     })
