Fix status page

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/renderTorrentState/renderTorrentState.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/renderTorrentState/renderTorrentState.html
@@ -1,1 +1,1 @@
-<span class="label" ng-class="cssConfig[torrent.state]">[[process(torrent).stateText]]&nbsp;-&nbsp;[[torrent.percentDone]]%</span>
+<span class="label" ng-class="stateConfig[torrent.state].cssClass">[[stateConfig[torrent.state].stateText]]&nbsp;-&nbsp;[[torrent.percentDone]]%</span>
