Search websites are now stored in DB. Several tidy ups. Attempt to fix KickassTorrents, but still broken due no changes on classNames to select magnet links.

--- a/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -38,8 +38,8 @@
     <!-- /#wrapper -->
 
     {% block javascripts  %}
-	    <script type="text/javascript" src="client/js/lib/jquery.js"></script>
-	    <script type="text/javascript" src="client/js/lib/bootstrap.min.js"></script>
+	    <script type="text/javascript" src="client/js/filemanager/jquery.min.js"></script>
+	    <script type="text/javascript" src="client/js/filemanager/bootstrap.min.js"></script>
 	    <script type="text/javascript" src="client/js/plugins/metisMenu/metisMenu.min.js"></script>
 	    <script type="text/javascript" src="client/js/sb-admin-2.js"></script>
 		  <script type="text/javascript" src="client/js/app/init.js"></script>
