--- a/src/Morenware/DutilsBundle/Resources/client/app/components/adminForm/adminForm.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/adminForm/adminForm.html
@@ -8,6 +8,7 @@
       <div ng-switch-when="TEXT">
         <label for="{{field.name}}" class="control-label">[[field.label]]</label>
         <input type="text" ng-model="field.value" class="form-control" id="[[field.name]]" placeholder="[[field.placeholder]]"/>
+        <p ng-if="field.helpText" class="help-block">[[field.helpText]]</p>
       </div>
       <div ng-switch-when="BOOLEAN">
         <div class="checkbox">
@@ -15,6 +16,11 @@
             <input type="checkbox" ng-model="field.value" id="[[field.name]]" placeholder="[[field.placeholder]]"/> [[field.label]]
           </label>
         </div>
+      </div>
+      <div ng-switch-when="DATETIME">
+        <label for="{{field.name}}" class="control-label">[[field.label]]</label>
+        <input type="text" ng-model="field.value" class="form-control" id="[[field.name]]" placeholder="[[field.placeholder]]"/>
+        <p ng-if="field.helpText" class="help-block">[[field.helpText]]</p>
       </div>
     </div>
     </div>
