--- a/src/Morenware/DutilsBundle/Resources/client/app/components/adminTable/adminTable.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/adminTable/adminTable.html
@@ -14,6 +14,8 @@
                      <div ng-switch on="field.type">
                         <div ng-switch-when="TEXT" ng-bind="item[field.name]">
                         </div>
+                        <div ng-switch-when="DATETIME" ng-bind="item[field.name]">
+                        </div>
                         <div ng-switch-when="BOOLEAN">
                             <a href="#" class="table-boolean glyphicon"
                              ng-class="item[field.name] ? 'glyphicon-ok' : 'glyphicon-remove'"></a>
