--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -2,86 +2,6 @@
 
 {% block body %}
 
-
-<div class="searchTorrentsPage container-fluid" ng-controller="searchController" ng-init="initTorrents({{ torrentsInfo }})">
-   <div class="row-fluid">
-     <h1 class="page-header">Search torrents</h1>
-	</div>
-
-    <form>
-    	<div class="row search-form">
-    		 <div class="input-group custom-search-form col-lg-12">
-             	<input type="text" class="form-control" ng-model="query" placeholder="Search...">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" type="submit" ng-click="search()">
-                    <i ng-show="!loading" class="fa fa-search"></i>
-                    <i ng-show="loading" class="fa">&nbsp;Searching</i>
-                  </button>
-                </span>
-             </div>
-    	</div>
-    </form>
-
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="checkbox">
-                <label ng-repeat="site in searchSites">
-                    <input type="checkbox" ng-model="site.selected" id="searchSite1" /> [[site.name]] &nbsp;
-                </label>
-            </div>
-        </div>
-    </div>
-
-	<div class="row-fluid search-results" ng-show="searchFinished">
-	    <div class="col-lg-12 ng-cloak">
-	                <h4>Results for: '[[query]]'</h4>
-	                <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
-                     <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Title</th>
-                                    <th>Date</th>
-                                    <th>Size</th>
-                                    <th>Seeds</th>
-                                    <th>State</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="torrent in torrents track by $index">
-                                    <td ng-bind="offset+$index+1"></td>
-                                    <td ng-bind="torrent.torrentName"></td>
-                                    <td ng-bind="torrent.date"></td>
-                                    <td ng-bind="torrent.size ? torrent.size + ' MB' : 'N/A'"></td>
-                                    <td ng-bind="torrent.seeds == 0 ? 0 : torrent.seeds"></td>
-                                    <td>[[torrent.state]]</td>
-                                    <td class="col-lg-6">
-                                        <button
-                                         ng-show="torrent.state == 'New'"
-                                         ng-click="startDownload(torrent)"
-                                         class="btn btn-sm btn-primary"
-                                         ng-disabled="torrent.state !== 'New'">
-                                          [[torrent.buttonText]]
-                                         </button>
-
-                                        <button ng-show="torrent.state == 'Downloading' || torrent.state == 'Download_completed'" ng-click="cancelDownload(torrent)" target="_blank" class="btn btn-sm btn-primary">
-                                          [[torrent.buttonText]]
-                                        </button>
-
-                                        <a ng-show="torrent.torrentFileLink" href="[[torrent.torrentFileLink]]" target="_blank" class="btn btn-sm btn-info">Torrent file</a>
-
-                                        <a ng-show="torrent.magnetLink" href="[[torrent.magnetLink]]" target="_blank" class="btn btn-sm btn-info">Magnet</a>
-
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-		</div>
-
-	</div>
+<search />
 
 {% endblock %}
