--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/torrentElements/torrentElements.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/torrentElements/torrentElements.html
@@ -1,7 +1,7 @@
 <div class="list-group container-fluid">
-  <div class="list-group-item row-fluid clearfix" ng-repeat="torrent in torrents | torrentsByState:filterState track by $index">
+  <div class="list-group-item row-fluid clearfix" ng-class-odd="'gray-lighter'" ng-repeat="torrent in torrents | torrentsByState:filterState track by $index">
      <div class="pull-left col-sm-12 col-xs-12 no-padding">
-      <torrent-element torrent="torrent" />
+      <torrent-element torrent="torrent" style="style"/>
      </div>
   </div>
 </div>
