--- a/src/Morenware/DutilsBundle/Resources/client/app/components/search/directives/search.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/search/directives/search.html
@@ -29,51 +29,9 @@
 
 	  <div class="row-fluid search-results" ng-show="searchFinished">
 	    <div class="col-lg-12 ng-cloak">
-	                <h4>Results for: '[[query]]'</h4>
-	                <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
-                     <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Title</th>
-                                    <th>Date</th>
-                                    <th>Size</th>
-                                    <th>Seeds</th>
-                                    <th>State</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="torrent in torrents track by $index">
-                                    <td ng-bind="offset+$index+1"></td>
-                                    <td ng-bind="torrent.torrentName"></td>
-                                    <td ng-bind="torrent.date"></td>
-                                    <td ng-bind="torrent.size ? torrent.size + ' MB' : 'N/A'"></td>
-                                    <td ng-bind="torrent.seeds == 0 ? 0 : torrent.seeds"></td>
-                                    <td>[[torrent.state]]</td>
-                                    <td class="col-lg-6">
-                                        <button
-                                         ng-show="torrent.state == 'New'"
-                                         ng-click="startDownload(torrent)"
-                                         class="btn btn-sm btn-primary"
-                                         ng-disabled="torrent.state !== 'New'">
-                                          [[torrent.buttonText]]
-                                         </button>
-
-                                        <button ng-show="torrent.state == 'Downloading' || torrent.state == 'Download_completed'" ng-click="cancelDownload(torrent)" target="_blank" class="btn btn-sm btn-primary">
-                                          [[torrent.buttonText]]
-                                        </button>
-
-                                        <a ng-show="torrent.torrentFileLink" href="[[torrent.torrentFileLink]]" target="_blank" class="btn btn-sm btn-info">Torrent file</a>
-
-                                        <a ng-show="torrent.magnetLink" href="[[torrent.magnetLink]]" target="_blank" class="btn btn-sm btn-info">Magnet</a>
-
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+	       <h4>Results for: '[[query]]'</h4>
+	       <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
+         <torrents-elements torrents="torrents" style="COMPACT" />             
 
 		</div>
 
