--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -55,16 +55,16 @@
                         </li> -->
                         <li class="header"><a>Main</a></li>
                         <li>
-                            <a href="search"><i class="fa fa-search fa-fw"></i>Search</a>
+                            <a href="search">Search</a>
                         </li>
                         <li>
-                            <a href="status"><i class="fa fa-dashboard fa-fw"></i>Status</a>
+                            <a href="status">Status</a>
                         </li>
                         <li>
-                            <a href="feeds"><i class="fa fa-gear"></i>Feeds</a>
+                            <a href="feeds">Feeds</a>
                         </li>
                         <li>
-                            <a href="automatedsearch"><i class="fa fa-gear"></i>Automated search</a>
+                            <a href="automatedsearch">Automated search</a>
                         </li>
 
                     </ul>
