--- a/web/client/css/main.css
+++ b/web/client/css/main.css
@@ -165,11 +165,11 @@ body.login form { }
 }
 
 .list-group-item {
-	margin-top: 10px;
-	margin-bottom: 5px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	min-height: 20px;
 	padding: 5px;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 	margin-right: 0;
 	border: none;
 	border-bottom: 1px solid #eee;
@@ -177,7 +177,7 @@ body.login form { }
 
 .list-group-item-text {
 	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	padding-left: 0;
 }
 
@@ -215,3 +215,19 @@ span.label {
 
 /* ensure ng-cloak hides temporary angular template */
 .ng-cloak { display:none !important; }
+
+.gray-lighter {
+
+	background-color: #f6f6f6;
+
+}
+
+span.torrentTitle {
+	margin-left: 4px;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
