More reuse of directives between status / search pages. Changed positions of labels and progress.

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/torrentActions/torrentActions.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/torrentActions/torrentActions.html
@@ -27,7 +27,7 @@
 
     <button ng-show="torrent.state == 'RENAMING_COMPLETED'"
             ng-click="fetchSubtitles(torrent)" class="btn btn-sm btn-primary pull-left">
-      Get subtitles
+      Subtitles
     </button>
 
     <a ng-show="torrent.magnetLink"
