--- a/src/Morenware/DutilsBundle/Resources/client/app/components/search/directives/search.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/search/directives/search.html
@@ -8,10 +8,12 @@
     		 <div class="input-group custom-search-form col-lg-12">
              	<input type="text" class="form-control" ng-model="query" placeholder="Search...">
                 <span class="input-group-btn">
+
                   <button class="btn btn-default" type="submit" ng-click="search()">
                     <i ng-show="!loading" class="fa fa-search"></i>
                     <i ng-show="loading" class="fa">&nbsp;Searching</i>
                   </button>
+
                 </span>
              </div>
     	</div>
@@ -31,7 +33,7 @@
 	    <div class="col-lg-12 ng-cloak">
 	       <h4>Results for: '[[query]]'</h4>
 	       <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
-         <torrents-elements torrents="torrents" style="COMPACT" />             
+         <torrents-elements torrents="torrents" style="COMPACT" show-progress="false" />
 
 		</div>
 
