--- a/src/Morenware/DutilsBundle/Resources/client/app/components/search/directives/search.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/search/directives/search.html
@@ -4,8 +4,8 @@
 	 </div>
 
     <form>
-    	<div class="row search-form">
-    		 <div class="input-group custom-search-form col-lg-12">
+    	<div class="row-fluid search-form">
+    		 <div ng-show="selectedSite.id !== 'LINK'" class="input-group custom-search-form col-lg-12">
              	<input type="text" class="form-control" ng-model="query" placeholder="Search...">
                 <span class="input-group-btn">
 
@@ -15,7 +15,10 @@
                   </button>
 
                 </span>
-             </div>
+         </div>
+
+         <torrent-single-download ng-show="selectedSite.id == 'LINK'" />
+
     	</div>
     </form>
 
@@ -23,7 +26,7 @@
         <div class="col-lg-12">
             <div class="checkbox">
                 <label ng-repeat="site in searchSites">
-                    <input type="checkbox" ng-model="site.selected" id="searchSite1" /> [[site.name]] &nbsp;
+                    <input type="checkbox" ng-model="site.selected" ng-change="checkSingleDownload(site)" id="searchSite1" /> [[site.name]] &nbsp;
                 </label>
             </div>
         </div>
@@ -34,7 +37,7 @@
 	       <h4>Results for: '[[query]]'</h4>
 	       <h5>[[offset+1]]-[[currentOffset]] of [[total]]</h5>
          <torrents-elements torrents="torrents" style="COMPACT" show-progress="false" />
-
+         <torrent-single-download />
 		</div>
 
 	</div>
