Add menu option for Filemanager

--- a/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -62,10 +62,13 @@
                         <li>
                             <a href="automatedsearch">Automated search</a>
                         </li>
+                        <li>
+                            <a href="filemanager" target="_blank">Explore library</a>
+                        </li>
 
                     </ul>
                 </div>
 
             </div>
-         
+
         </nav>
